--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body{
     padding: 0;
 }
 
-.main{
+.contact-form{
     background-color: #D3C5FC;
-    height: 1000px;
+    height: 300px;
     width: 1920px;
 }
 
