--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body{
     padding: 0;
 }
 
+.ontact-form{
+    height:100;
+    width:500;
+}
+
 .main{
     background-color: #D3C5FC;
     height: 300px;
